feat: add top news

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   <div class="input-field">
                     <select name="country" id="country">                    
                       <option value="us">United States</option>
-                      <option value="by">Belarus</option>
+                      <option value="ru">Russia</option>
                     </select>
                     <label>Choose your country</label>
                   </div>
