feat: add select countty & realized search

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                   <div class="input-field">
                     <select name="country" id="country">                    
                       <option value="us">United States</option>
-                      <option value="ru">Russia</option>
+                      <option value="ca">Canada</option>
+                      <option value="gb">United Kingdom</option>
                     </select>
                     <label>Choose your country</label>
                   </div>
