feat: add category select

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
     <link rel="stylesheet" href="style.css" />
+    <base target="_blank">
   </head>
   <body>
     <nav class="green darken-2">
@@ -36,9 +37,22 @@
                       <option value="us">United States</option>
                       <option value="ca">Canada</option>
                       <option value="gb">United Kingdom</option>
+                      <option value="ru">Russia</option>
                     </select>
                     <label>Choose your country</label>
                   </div>
+                  <div class="input-field">
+                    <select name="category" id="category">                    
+                      <option value="general">general</option>
+                      <option value="business">business</option>
+                      <option value="science">science</option>
+                      <option value="sports">sports</option>
+                      <option value="technology">technology</option>
+
+                    </select>
+                    <label>Choose your category</label>
+                  </div>
+                  
                   <div class="input-field">
                     <input
                       type="text"
